completamente refeito o sistema de calcular imposto e desconto